# matrixComp

./: .gitignore  AUTHORS  LICENSE  README.md  configure.ac
src/: .gitignore  Makefile.am
src/C/: Makefile.am  matrix.c  matrix.h  measure.c  test.c
